--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.11",
     "next": "15.2.1",
+    "openai": "^4.86.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
